--- a/W3_MP3/css/all.css
+++ b/W3_MP3/css/all.css
@@ -19,6 +19,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
     line-height: 1;
+    position: relative;
 }
 
 ol, ul {
@@ -73,7 +74,7 @@ button {
     transition: 1s all;
 }
 
-.main.hide-aside .aside{
+.main.hide-aside .aside {
     transform: translateX(-560px) translateY(-50px) rotate(30deg);
 }
 
@@ -107,7 +108,7 @@ button {
 }
 
 .aside .working .aside-switch .line {
-    width:27px;
+    width: 27px;
     height: 3px;
     margin-top: 4px;
     background-color: #000;
@@ -116,21 +117,30 @@ button {
 /* player */
 
 .player {
-    margin-top: 28px;
     position: absolute;
+    top: 28px;
     left: 580px;
     width: 732px;
     height: 732px;
     border: 3px solid #000;
     background-color: #fff;
-    transition: 1s all ;
+    transition: 1s all;
+    z-index: 0;
+    background-image: url(../img/vibration1.png), url(../img/vibration2.png);
+    background-repeat: no-repeat;
+    background-position: 45.37px 196.54px, 626px 281.97px;
+    background-size: 26.25px 61.64px, 15.92px 63.11px;
 }
 
-.main.hide-aside .player{
+.player.pause{
+    background-image: none;
+}
+
+.main.hide-aside .player {
     left: 256px;
 }
 
-.player .cd{
+.player .cd {
     position: absolute;
     left: 70px;
     top: 30px;
@@ -146,12 +156,210 @@ button {
     background-position: center center;
 }
 
-.player .cd .circle{
+.player .cd .circle {
     border: 3px solid #000;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     background-color: #fff;
+}
+
+.player .next-button, .player .previous-button, .player .random-button {
+    width: 59.5px;
+    height: 59.5px;
+    background-size: 59.5px 59.5px;
+}
+
+.player .play-button {
+    width: 92px;
+    height: 92px;
+}
+
+.player .next-button, .player .previous-button, .player .random-button, .player .play-button {
+    border: 3px solid #000;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.player .next-button:before, .player .previous-button:before, .player .random-button:before, .player .play-button:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 3px;
+    top: 5px;
+    border: 3px solid #000;
+    background-color: #C5C5C5;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.player .next-button:active, .player .previous-button:active, .player .random-button:active, .player .play-button:active, .player.random .random-button {
+    margin-right: -7px;
+    margin-top: 9px;
+    background-color: #DFDFDF;
+}
+
+.player .next-button:active::before, .player .previous-button:active::before, .player .random-button:active::before, .player .play-button:active::before, .player.random .random-button::before {
+    left: -3px;
+    top: -3px;
+}
+
+.player .previous-button {
+    top: 39px;
+    right: 44.4px;
+    background-image: url(../img/previous.png);
+    background-size: 21px 20.5px;
+}
+
+.player .next-button {
+    top: 119px;
+    right: 44.4px;
+    background-image: url(../img/next.png);
+    background-size: 21px 20.5px;
+}
+
+.player .random-button {
+    top: 537px;
+    right: 44.4px;
+    background-size: 32.6px 21.21px;
+    background-image: url(../img/random.png);
+}
+
+.player .play-button {
+    top: 574px;
+    right: 346px;
+    background-size: 29px 32.2px;
+    background-image: url(../img/pause.png);
+}
+
+.player.pause .play-button {
+    background-image: url(../img/play.png);
+}
+
+.player .needle {
+    position: absolute;
+    width: 204.8px;
+    height: 386.6px;
+    background-image: url(../img/needle.png);
+    background-size: 204.8px 386.6px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    top: 263px;
+    left: 92px;
+    transition: all 1s;
+    transform-origin: 191px bottom 373px;
+}
+
+.player.pause .needle {
+    transform: rotate(-15deg);
+}
+
+.player .title {
+    position: absolute;
+    top: 607px;
+    left: 34px;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 36px;
+    width: 220px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.player .singer {
+    position: absolute;
+    top: 639px;
+    left: 34px;
+    font-size: 16px;
+    line-height: 24px;
+    width: 220px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.player input[type="range"] {
+    -webkit-appearance: none;
+    outline: none;
+    background: none;
+    border: #000 3px solid;
+    border-radius: 76px;
+}
+
+.player input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    position: relative;
+    width: 16px;
+    height: 25px;
+    border: #000 3px solid;
+    border-radius: 2px;
+    background-color: #fff;
+}
+
+.player .time {
+    position: absolute;
+    top: 681px;
+    left: 34px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 650px;
+}
+
+.player .time .before, .player .time .after {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 0px 5px;
+}
+
+.player .time .time-range {
+    width: 538px;
+    height: 9px;
+}
+
+.player .volum {
+    position: absolute;
+    top: 631px;
+    left: 483px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 196.5px;
+}
+
+.player .volum-range {
+    width: 163px;
+    height: 9px;
+}
+
+.player.mute .volum-range, .player.mute .volum-range::-webkit-slider-thumb {
+    border-color: #C5C5C5;
+}
+
+.player .mute-button {
+    position: relative;
+    width: 20.73px;
+    height: 16.43px;
+    background-image: url(../img/speaker.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20.73px 16.43px;
+}
+
+.player.mute .mute-button::after {
+    position: absolute;
+    content: "";
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    left: -1px;
+    top: -1px;
+    transform-origin: left top;
+    transform: rotate(30deg);
 }
 
 .player .bottom {
