--- a/W10_MaskMap/css/all.css
+++ b/W10_MaskMap/css/all.css
@@ -3,50 +3,213 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before, blockquote:after, q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-*{
-    box-sizing: border-box;
-    font-family: 'Noto Sans TC', sans-serif;
+label{
+	cursor: pointer;
+}
+
+* {
+	box-sizing: border-box;
+	/* overflow: hidden; */
+}
+
+.wrap {
+	max-width: 1920px;
+	margin: 0 auto;
+	font-family: 'Noto Sans TC', sans-serif;
+	color: #333333;
+	display: flex;
+}
+
+.sidebar {
+	background-color: #fff;
+	width: 500px;
+	box-shadow: 1px 0px 5px #333333;
+	/* height: 100vh; */
+}
+
+.sidebar .top {
+	background-color: #7be0e5;
+	padding: 25px;
+	height: 200px;
+}
+
+.sidebar .top .title {
+	font-size: 36px;
+}
+
+.sidebar .top .search {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.sidebar .top .search .search-input {
+	border: none;
+	outline: none;
+	width: 395px;
+	height: 55px;
+	border-radius: 10px 0 0 10px;
+	padding: 10px 0 10px 10px;
+	font-size: 24px;
+}
+
+.sidebar .top .search .search-button {
+	background-image: url(../img/search.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-color: #fff;
+	height: 55px;
+	width: 55px;
+	border-radius: 0 10px 10px 0;
+	outline: none;
+	border: none;
+	cursor: pointer;
+}
+
+.sidebar .top .checkboxes {
+	margin-top: 20px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	font-size: 18px;
+}
+
+.sidebar .top .checkboxes .checkbox {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	outline: none;
+}
+
+.sidebar .top .checkboxes .checkbox::before{
+	content: '';
+	display: block;
+	width: 18px;
+	height: 18px;
+	background-image: url(../img/checkbox-false.png);
+	background-size: 18px;
+	margin: 0 3px 0 20px;
+	cursor: pointer;
+}
+
+.sidebar .list{
+	padding: 25px 7px 0px 25px;
+	overflow-y: scroll;
+	height: calc(100vh - 200px)
+}
+
+.sidebar .list::-webkit-scrollbar{
+	width: 18px;
+}
+
+.sidebar .list::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	box-shadow: inset 0 0 10px 10px #7be0e5;
+    border: solid 3px transparent;
+}
+
+.sidebar .list .item{
+	border-bottom: 3px solid #7be0e5;
+	padding-bottom: 5px;
+	margin-bottom: 25px;
+}
+
+.sidebar .list .item .title{
+	font-size: 24px;
+	width: 100%;
+	padding-bottom: 5px;
+}
+
+.sidebar .list .data{
+	width: calc(100% - 18px);
+	display: flex;
+	align-items: center;
+	margin-top: 10px;
+	font-size: 18px;
+}
+
+.sidebar .list .data::before{
+	content: '';
+	display: block;
+	width: 18px;
+	height: 18px;
+	background-repeat: no-repeat;
+	background-position: center center;
+	margin: 0 5px 0 15px;
+}
+
+.sidebar .list .address::before{
+	background-image: url(../img/address.png);
+}
+
+.sidebar .list .phone::before{
+	background-image: url(../img/phone.png);
+}
+
+.sidebar .list .time::before{
+	background-image: url(../img/time.png);
+}
+
+.sidebar .list .mask{
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	font-size: 20px;
+}
+
+.sidebar .list .mask .adult,
+.sidebar .list .mask .child{
+	width: 35%;
+	padding: 5px;
+	margin: 20px 10px;
+	border-radius: 4px;
+	background-color: #aebbc1;
+	display: flex;
+	justify-content: center;
+}
+
+.sidebar .list .mask .adult{
+	background-color: #80e57b;
+}
+
+.map{
+	width: calc(100% - 500px);
+	height: 100vh;
 }
