--- a/W10_MaskMap/css/all.css
+++ b/W10_MaskMap/css/all.css
@@ -56,10 +56,12 @@ label{
 	display: flex;
 }
 
+/* sidebar */
+
 .sidebar {
 	background-color: #fff;
 	width: 500px;
-	box-shadow: 1px 0px 5px #333333;
+	box-shadow: 0px 0px 7px #333333;
 	/* height: 100vh; */
 }
 
@@ -88,6 +90,7 @@ label{
 	border-radius: 10px 0 0 10px;
 	padding: 10px 0 10px 10px;
 	font-size: 24px;
+	font-family: 'Noto Sans TC', sans-serif;
 }
 
 .sidebar .top .search .search-button {
@@ -129,6 +132,12 @@ label{
 	cursor: pointer;
 }
 
+.sidebar .top .checkboxes .checkbox.active::before{
+	background-image: url(../img/checkbox-true.png);
+}
+
+/* sidebar > list */
+
 .sidebar .list{
 	padding: 25px 7px 0px 25px;
 	overflow-y: scroll;
@@ -149,12 +158,19 @@ label{
 	border-bottom: 3px solid #7be0e5;
 	padding-bottom: 5px;
 	margin-bottom: 25px;
+	position: relative;
 }
 
 .sidebar .list .item .title{
 	font-size: 24px;
 	width: 100%;
 	padding-bottom: 5px;
+}
+
+.sidebar .list .distance{
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
 .sidebar .list .data{
@@ -196,18 +212,20 @@ label{
 
 .sidebar .list .mask .adult,
 .sidebar .list .mask .child{
-	width: 35%;
-	padding: 5px;
+	width: 45%;
+	padding: 10px 20px;
 	margin: 20px 10px;
 	border-radius: 4px;
-	background-color: #aebbc1;
+	background-color: #ccc;
 	display: flex;
 	justify-content: center;
 }
 
-.sidebar .list .mask .adult{
-	background-color: #80e57b;
+.sidebar .list .mask .stock{
+	background-color: #7be0e5;
 }
+
+/* map */
 
 .map{
 	width: calc(100% - 500px);
