--- a/W10_MaskMap/css/all.css
+++ b/W10_MaskMap/css/all.css
@@ -116,7 +116,6 @@ label {
 	border-radius: 0 10px 10px 0;
 	outline: none;
 	border: none;
-	cursor: pointer;
 }
 
 .sidebar .top .search.searching .search-button {
@@ -351,4 +350,31 @@ label {
 
 .map .leaflet-popup-content .mask.true{
 	background: #7be0e5;
+}
+
+.map .marker-cluster-small,
+.map .marker-cluster-medium,
+.map .marker-cluster-large{
+	background-color: rgba(255, 255, 255, 0.8);
+	font-weight: bold;
+	font-size: 16px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.map .marker-cluster-small{
+	width: 50px !important;
+	height: 50px !important;
+}
+
+.map .marker-cluster-medium{
+	width: 65px !important;
+	height: 65px !important;
+}
+
+.map .marker-cluster-large{
+	width: 80px !important;
+	height: 80px !important;
 }
