--- a/W10_MaskMap/css/all.css
+++ b/W10_MaskMap/css/all.css
@@ -96,6 +96,7 @@ label {
 
 .notice .box {
 	width: 90%;
+	max-height: 90%;
 	max-width: 800px;
 	padding: 30px;
 	background-color: rgba(255, 255, 255, 0.9);
@@ -621,6 +622,9 @@ label {
 }
 
 @media(max-width: 480px) {
+	.notice .box{
+		font-size: 18px;
+	}
 	.sidebar {
 		width: 100%;
 	}
